--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,3 +5,58 @@ Paleta de Cores
 Azul Claro: #27ADF5
 Azul Acinzentado: #50798F
 */
+:root {
+    --cor0: #ffffff;
+    --cor1: #000000;
+    --cor2: #50798F;
+    --cor3: #27ADF5;
+}
+
+* {
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body,
+html {
+    background-color: var(--cor2);
+    height: 100vh;
+    width: 100vw;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+
+    background-color: var(--cor0);
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+}
+
+section#login > div#imagem{
+    display: block;
+    background: var(--cor2) url(../imagens/pexels-sean-whang.jpg) no-repeat;
+    background-position: left bottom;
+    background-size: cover;
+    height: 200px;
+}
+
+section#login > div#formulário{
+    display: block;
+    padding: 10px;
+
+}
