--- a/estilos/style.css
+++ b/estilos/style.css
@@ -10,6 +10,7 @@ Azul Acinzentado: #50798F
     --cor1: #000000;
     --cor2: #50798F;
     --cor3: #27ADF5;
+    --cor4: #9EBBCB; 
 }
 
 * {
@@ -22,7 +23,7 @@ Azul Acinzentado: #50798F
 
 body,
 html {
-    background-color: var(--cor2);
+    background-color: var(--cor4);
     height: 100vh;
     width: 100vw;
 }
@@ -45,6 +46,9 @@ section#login {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+
+    transition: width .4s, height .4s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem{
