--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,17 +1,9 @@
 @charset "UTF-8";
 
-:root {
-    --cor0: #ffffff;
-    --cor1: #000000;
-    --cor4: #9EBBCB;
-    --cor2: #50798F;
-    --cor3: #27ADF5;
-}
-
 @media screen and (min-width: 768px) and (max-width: 992px){
     
     body{
-        background-image: linear-gradient(to bottom, var(--cor4), var(--cor2));
+        background-image: linear-gradient(to bottom, var(--cor5), var(--cor2));
     }
 
     section#login{
@@ -34,17 +26,11 @@
 @media screen and (min-width: 992px) {
 
 body{
-    background-image: linear-gradient(to bottom, var(--cor4), var(--cor2));
+    background-image: linear-gradient(to bottom, var(--cor5), var(--cor2));
 }
 
     section#login {
         width: 950px;
-    }
-
-    section#login{
-        float: left;
-        width: 50%;
-        height: 100%;
     }
 
     section#login > div#imagem{
@@ -54,6 +40,7 @@ body{
     }
 
     section#login > div#formulario{
+        padding: 10px;
         float: right;
         width: 50%;
     }
