--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,9 +8,10 @@ Azul Acinzentado: #50798F
 :root {
     --cor0: #ffffff;
     --cor1: #000000;
-    --cor2: #50798F;
+    --cor2: #165374;
     --cor3: #27ADF5;
     --cor4: #9EBBCB; 
+    --cor5: #926f92;
 }
 
 * {
