--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -17,9 +17,12 @@
     }
 
     section#login > div#formulario{
-        padding: 10px;
         float: right;
         width: 70%
+    }
+
+    div#formulario > p{
+        font-size: 1em;
     }
 }
 
@@ -34,15 +37,21 @@ body{
     }
 
     section#login > div#imagem{
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     section#login > div#formulario{
-        padding: 10px;
-        float: right;
+        float: left;
         width: 50%;
     }
+
+    div#formulario > h1{
+        font-size: 2em;
+    }
     
+    div#formulario > p{
+        font-size: 1.2em;
+    }
 }
