--- a/estilos/style.css
+++ b/estilos/style.css
@@ -9,7 +9,7 @@ Azul Acinzentado: #50798F
     --cor0: #ffffff;
     --cor1: #000000;
     --cor2: #165374;
-    --cor3: #27ADF5;
+    --cor3: #275ef5;
     --cor4: #9EBBCB; 
     --cor5: #926f92;
 }
@@ -60,7 +60,7 @@ section#login > div#imagem{
     height: 200px;
 }
 
-section#login > div#formulário{
+section#login > div#formulario{
     display: block;
     padding: 10px;
 }
@@ -70,5 +70,59 @@ div#formulario > h1{
     margin-bottom: 10px;
 }
 div#formulario > p{
-    font-size: 0.8em;
+    font-size: 0.9em;
+}
+
+form > div.campo{
+    background-color: #96b2c0;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 7px;
+    margin: 5px 0px;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-weight: bold;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    color: var(--cor0);
+    background-color: #357394;
+    border: none;
+    border-radius: 7px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: #285a75;
+}
+
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    margin-top: 5px;
+    padding-top: 7px;
+    background-color: #ffffff;
+    color: #0d2d3f;
+    border: 1px solid #357394;
+    border-radius: 7px;
+    text-decoration: none;
+}
+
+form > a.botao:hover{
+    background-color: #7bbbdd;
+    color: white;
+}
+
+form > a.botao > span{
+    font-size: 0.9em;
+}
+
+div.campo > label{
+    display: none;
 }
