--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,13 +1,14 @@
 @charset "UTF-8";
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
-
+/*Configuração para tablet*/
     body {
         background-image: linear-gradient(to bottom, var(--cor5), var(--cor2));
     }
 
     section#login {
         width: 80vw;
+        height: 350px;
     }
 
     section#login>div#imagem {
@@ -18,7 +19,8 @@
 
     section#login>div#formulario {
         float: right;
-        width: 70%
+        width: 70%;
+        padding: 40px;
     }
 
     div#formulario>p {
@@ -28,13 +30,14 @@
 }
 
 @media screen and (min-width: 992px) {
-
+/*Configuração para Desktop*/
     body {
         background-image: linear-gradient(to bottom, var(--cor5), var(--cor2));
     }
 
     section#login {
         width: 950px;
+        height: 450px;
     }
 
     section#login>div#imagem {
@@ -46,6 +49,7 @@
     section#login>div#formulario {
         float: left;
         width: 50%;
+        padding: 50px;
     }
 
     div#formulario>h1 {
@@ -53,7 +57,8 @@
     }
 
     div#formulario>p {
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 10px 0px;
     }
 
 }
