--- a/estilos/style.css
+++ b/estilos/style.css
@@ -41,15 +41,17 @@ section#login {
     left: 50%;
     transform: translate(-50%, -50%);
     overflow: hidden;
-
+    
     background-color: var(--cor0);
     width: 250px;
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 
+    transform: translateY(-9px);
     transition: width .4s, height .4s;
     transition-timing-function: ease;
+
 }
 
 section#login > div#imagem{
@@ -73,8 +75,27 @@ div#formulario > p{
     font-size: 0.9em;
 }
 
+div.campo > span{
+    color: white;
+    font-size: 1.8em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input{
+    background-color: #ffffff;
+    font-size: 0.9em;
+    width: calc(100% - 45px);
+    height: 100%;
+    border: 0px;
+    border-radius: 7px;
+    padding: 4px;
+    transform: translateY(-9px);
+}
+
 form > div.campo{
-    background-color: #96b2c0;
+    background-color: #6b91a7;
+    border: 2px solid #6b91a7;
     display: block;
     width: 100%;
     height: 40px;
